@@ -8,6 +8,8 @@
 					--------------------------------------
 
 
+  * PORT: Bug#110: Solaris float handling.  Andreas Vögele.
+
   * FIXED: IO_RECORDPOS handling.  Bug exposed by changes for UTF-17 I/O
     on Windows.  Dmitry and Holger Kanwischer.
 
